--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,10 @@
-server:
-  port: 8191
 spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/PasinduChandrasekara/spring-cloud-config-store
-          search-paths:
-           - '*service'
-
-
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/rentDB?createDatabaseIfNotExist=true
+    username: root
+    password: myB!gPassw0rd
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
